--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,25 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest = "*"
-pytest-bdd = "*"
-selenium = "*"
-selene = "*"
+pytest = "==6.2.1"
+pytest-bdd = "==4.0.2"
+selenium = "~=3.141.0"
+selene = "~=1.0.2"
+packaging = "==20.8"
+atomicwrites = "==1.4.0"
+attrs = "==20.3.0"
+colorama = "==0.4.4"
+glob2 = "==0.7"
+iniconfig = "==1.1.1"
+mako = "==1.1.3"
+markupsafe = "==1.1.1"
+parse = "==1.18.0"
+parse-type = "==0.5.2"
+pluggy = "==0.13.1"
+py = "==1.10.0"
+pyparsing = "==2.4.7"
+six = "==1.15.0"
+toml = "==0.10.2"
 
 [dev-packages]
 
