--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,13 @@
 [pytest]
+
+# File warnings to ignore markers warning
+
+filterwarnings =
+    error
+    ignore::UserWarning
+    ignore:function ham\(\) is deprecated:DeprecationWarning
+
+
 markers =
     smoke = smoke scenarios
     homepage = homepage scenarios
