--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,5 @@ filterwarnings =
     ignore::UserWarning
     ignore:function ham\(\) is deprecated:DeprecationWarning
 
+# Path for Scenarios
 
-markers =
-    smoke = smoke scenarios
-    homepage = homepage scenarios
